--- a/QR.html
+++ b/QR.html
@@ -127,12 +127,12 @@
     </tr>
     <tr>
         <th>审核老师姓名</th>
-        <td><a href=QR-副本.html>网页特效</a>; </td>
+        <td>哇新叽 </td>
     </tr>
     </tbody>
 </table>
 
-<a href=QR111.html>网页特效</a>
+
 
 <script type="application/javascript" src="/assets/jquery-1.12.4.js"></script>
 <script type="application/javascript" src="/assets/bootstrap-3.3.7/js/bootstrap.min.js"></script>
