--- a/fake_application_files/QR/刘群.html
+++ b/fake_application_files/QR/刘群.html
@@ -103,11 +103,11 @@
             </tr>
             <tr>
                 <th>原因描述</th>
-                <td>发烧</td>
+                <td>扁桃体发炎</td>
             </tr>
             <tr>
                 <th>目的地</th>
-                <td>宿舍</td>
+                <td>曲阜市人民医院</td>
             </tr>
             <tr>
                 <th>开始时间</th>
