--- a/fake_application_files/QR/冯杰骏.html
+++ b/fake_application_files/QR/冯杰骏.html
@@ -103,15 +103,15 @@
             </tr>
             <tr>
                 <th>原因描述</th>
-                <td>发烧</td>
+                <td>咳嗽地厉害，扁桃体发炎</td>
             </tr>
             <tr>
                 <th>目的地</th>
-                <td>宿舍</td>
+                <td>医院</td>
             </tr>
             <tr>
                 <th>开始时间</th>
-                <td>2024-5-9</td>
+                <td>2024-5-10</td>
             </tr>
             <tr>
                 <th>结束时间</th>
