--- a/fake_application_files/QR/孙鹤2024-9-30.html
+++ b/fake_application_files/QR/孙鹤2024-9-30.html
@@ -95,7 +95,7 @@
             </tr>
             <tr>
                 <th>是否离校</th>
-                <td>false</td>
+                <td>true</td>
             </tr>
             <tr>
                 <th>请假原因</th>
@@ -107,7 +107,7 @@
             </tr>
             <tr>
                 <th>目的地</th>
-                <td>车站</td>
+                <td>曲阜东站</td>
             </tr>
             <tr>
                 <th>开始时间</th>
@@ -127,7 +127,7 @@
             </tr>
             <tr>
                 <th>审核老师姓名</th>
-                <td>孔瑞；；</td>
+                <td>孔瑞；</td>
             </tr>
             </tbody>
         </table>
